objects/Tip__c.object
<CustomObject>
    <description>Custom object to store Tips (Mobile &amp; Management) for various combinations of Facility Walkthrough questions &amp; answers.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field is used on ManagementTips page, just to select contact to which email will be sent to</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tips</relationshipLabel>
        <relationshipName>Tips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility_Answer__c</fullName>
        <description>The Answer to the Facility Walkthrough Question this Tip is associated with.</description>
        <inlineHelpText>The Answer to the Facility Walkthrough Question this Tip is associated with.</inlineHelpText>
        <label>Facility Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Question__c</fullName>
        <description>The Facility Walkthrough Question this Tip is associated with.</description>
        <inlineHelpText>The Facility Walkthrough Question this Tip is associated with.</inlineHelpText>
        <label>Facility Question</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field that connects the Management Tips to the Producer Facility Account</description>
        <label>Producer Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tips</relationshipLabel>
        <relationshipName>Tips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tip__c</fullName>
        <description>The Tip (Mobile or Management) displayed to the User.</description>
        <inlineHelpText>The Tip (Mobile or Management) displayed to the User.</inlineHelpText>
        <label>Tip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tip</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Management_Tips</fullName>
        <columns>NAME</columns>
        <columns>Facility_Question__c</columns>
        <columns>Facility_Answer__c</columns>
        <columns>Tip__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tip__c.Management</value>
        </filters>
        <label>Management Tips</label>
        <sharedTo>
            <group>Matthew_Hareldson</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mobile_Tips</fullName>
        <columns>NAME</columns>
        <columns>Facility_Question__c</columns>
        <columns>Facility_Answer__c</columns>
        <columns>Tip__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tip__c.Mobile</value>
        </filters>
        <label>Mobile Tips</label>
        <sharedTo>
            <group>Matthew_Hareldson</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Tip Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tips</pluralLabel>
    <recordTypes>
        <fullName>Management</fullName>
        <active>true</active>
        <description>Record Type for Management Tips</description>
        <label>Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mobile</fullName>
        <active>true</active>
        <description>Record Type for Mobile Tips</description>
        <label>Mobile</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>